[gd_scene load_steps=59 format=3 uid="uid://ct1lhxba4d844"]

[ext_resource type="Texture2D" uid="uid://j8v5tjqmrfhm" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Ratcher/Spritesheets/Ratcher Idle.png" id="1_dg52c"]
[ext_resource type="Texture2D" uid="uid://j2bjk6mwel88" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Ratcher/Spritesheets/Ratcher Attack.png" id="1_i61md"]
[ext_resource type="Script" path="res://escenes/Enemic3.gd" id="1_yc51r"]
[ext_resource type="Texture2D" uid="uid://cgpigqas0jil5" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Ratcher/Spritesheets/Ratcher Death.png" id="2_fomq1"]
[ext_resource type="Texture2D" uid="uid://co8hbmbm2h7af" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Ratcher/Spritesheets/Ratcher Hurt.png" id="3_vjkah"]
[ext_resource type="Texture2D" uid="uid://b14nxphyan25y" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Ratcher/Spritesheets/Ratcher Jump.png" id="5_uq12r"]
[ext_resource type="Texture2D" uid="uid://bv27sxy7ctv6n" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Ratcher/Spritesheets/Ratcher Run.png" id="6_4m6q1"]
[ext_resource type="Script" path="res://pau batsums tot nou/player/Area2D.gd" id="8_ufevc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ub8tj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bb5gh"]
atlas = ExtResource("1_i61md")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_860et"]
atlas = ExtResource("1_i61md")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7qp3"]
atlas = ExtResource("1_i61md")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_re6sx"]
atlas = ExtResource("1_i61md")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bijug"]
atlas = ExtResource("1_i61md")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nlnd"]
atlas = ExtResource("1_i61md")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_me40j"]
atlas = ExtResource("1_i61md")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_evs27"]
atlas = ExtResource("1_i61md")
region = Rect2(448, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxjir"]
atlas = ExtResource("1_i61md")
region = Rect2(512, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_niucg"]
atlas = ExtResource("2_fomq1")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8woo1"]
atlas = ExtResource("2_fomq1")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ccr"]
atlas = ExtResource("2_fomq1")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_meji7"]
atlas = ExtResource("2_fomq1")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrqv"]
atlas = ExtResource("2_fomq1")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfffd"]
atlas = ExtResource("2_fomq1")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocfd4"]
atlas = ExtResource("2_fomq1")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ugvf"]
atlas = ExtResource("2_fomq1")
region = Rect2(448, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbnqr"]
atlas = ExtResource("2_fomq1")
region = Rect2(512, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk8oy"]
atlas = ExtResource("2_fomq1")
region = Rect2(576, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn2dq"]
atlas = ExtResource("2_fomq1")
region = Rect2(640, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xopfr"]
atlas = ExtResource("3_vjkah")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_or8sl"]
atlas = ExtResource("3_vjkah")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_210pa"]
atlas = ExtResource("3_vjkah")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugomk"]
atlas = ExtResource("3_vjkah")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cb4e"]
atlas = ExtResource("1_dg52c")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h72o6"]
atlas = ExtResource("1_dg52c")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fillv"]
atlas = ExtResource("1_dg52c")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls8a0"]
atlas = ExtResource("1_dg52c")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v53ih"]
atlas = ExtResource("1_dg52c")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c121n"]
atlas = ExtResource("1_dg52c")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ow7"]
atlas = ExtResource("1_dg52c")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t2nt"]
atlas = ExtResource("5_uq12r")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_amjdt"]
atlas = ExtResource("5_uq12r")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nef3o"]
atlas = ExtResource("5_uq12r")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbryw"]
atlas = ExtResource("5_uq12r")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t0he"]
atlas = ExtResource("5_uq12r")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7vja"]
atlas = ExtResource("5_uq12r")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggvv6"]
atlas = ExtResource("5_uq12r")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6f1m"]
atlas = ExtResource("6_4m6q1")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcpff"]
atlas = ExtResource("6_4m6q1")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1pp2"]
atlas = ExtResource("6_4m6q1")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fm7a"]
atlas = ExtResource("6_4m6q1")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uncgp"]
atlas = ExtResource("6_4m6q1")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmora"]
atlas = ExtResource("6_4m6q1")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_annic"]
atlas = ExtResource("6_4m6q1")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_judav"]
atlas = ExtResource("6_4m6q1")
region = Rect2(448, 0, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_3nd1h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb5gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_860et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7qp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re6sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bijug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nlnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me40j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evs27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxjir")
}],
"loop": true,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_niucg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8woo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ccr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meji7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfffd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocfd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ugvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbnqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk8oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn2dq")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xopfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or8sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_210pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugomk")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cb4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h72o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fillv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls8a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v53ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c121n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8ow7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t2nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amjdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nef3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbryw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t0he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7vja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggvv6")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6f1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcpff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1pp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fm7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uncgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmora")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_annic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_judav")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xjhbe"]
radius = 82.1523

[sub_resource type="CircleShape2D" id="CircleShape2D_38ejk"]
radius = 56.3749

[node name="Enemic3" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_yc51r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_ub8tj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -22)
sprite_frames = SubResource("SpriteFrames_3nd1h")
animation = &"run"
frame_progress = 0.0946971

[node name="Area_perseguint3" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_perseguint3"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_xjhbe")

[node name="Area_atacant3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_atacant3"]
position = Vector2(0, -12.5)
shape = SubResource("CircleShape2D_38ejk")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
script = ExtResource("8_ufevc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["enemies"]]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_ub8tj")

[connection signal="body_entered" from="Area_perseguint3" to="." method="_on_area_perseguint_3_body_entered"]
[connection signal="body_exited" from="Area_perseguint3" to="." method="_on_area_perseguint_3_body_exited"]
[connection signal="body_entered" from="Area_atacant3" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area_atacant3" to="." method="_on_area_atacant_3_body_entered"]
[connection signal="body_exited" from="Area_atacant3" to="." method="_on_area_atacant_3_body_exited"]
[connection signal="body_exited" from="Area_atacant3" to="." method="_on_area_2d_2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
